# bazel-gazelle-ex

./: .plzconfig  .wollemi.json  BUILD  README.md  WORKSPACE  deps.bzl  go.mod  go.sum
api/pinger/: BUILD.bazel  BUILD.plz  service.pb.go  service.pb.validate.go  service_grpc.pb.go
cmd/pinger/: BUILD.bazel  BUILD.plz  main.go
pinger/: BUILD.bazel  BUILD.plz  server.go
protos/pinger/: service.proto
tools/: BUILD
