load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "pinger",
    srcs = [
        "service.pb.go",
        "service.pb.validate.go",
        "service_grpc.pb.go",
    ],
    importpath = "github.com/ihtkas/bazel-gazelle-ex/api/pinger",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_envoyproxy_protoc_gen_validate//validate",
        "@com_github_golang_protobuf//proto",
        "@com_github_golang_protobuf//ptypes/timestamp",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
        "@org_golang_google_protobuf//reflect/protoreflect",
        "@org_golang_google_protobuf//runtime/protoimpl",
        "@org_golang_google_protobuf//types/known/anypb",
    ],
)
