load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "pinger_lib",
    srcs = ["main.go"],
    importpath = "github.com/ihtkas/bazel-gazelle-ex/cmd/pinger",
    visibility = ["//visibility:private"],
    deps = [
        "//api/pinger",
        "//pinger",
        "@org_golang_google_grpc//:grpc",
    ],
)

go_binary(
    name = "pinger",
    embed = [":pinger_lib"],
    visibility = ["//visibility:public"],
)
